update seeder, adđ permisson